<resources>
    <string name="app_name">LoginForm(Constraint Layout)</string>
    <string name="tusername">Email</string>
    <string name="tPassword">Password</string>
    <string name="bSignin">Sign In</string>
    <string name="rLogin">Login</string>
    <string name="label2">Login Berhasil</string>
    <string name="welcome">Selamat Datang</string>
    <string name="hi">Hi, </string>
    <string name="tapilNameH2"></string>
    <string name="tampilPassH2"></string>
    <string name="suklogin">Login Sukses</string>
    <string name="passh2">Password Anda :</string>
    <string name="mDaftar">Pendaftaran</string>
    <string name="ldaftar">Daftar</string>
    <string name="enama">Masukan Nama</string>
    <string name="eemail">Masukan E-Mail</string>
    <string name="epass">Masukan Password</string>
    <string name="erepass">Masukan Password Kembali</string>
    <string name="ealamat">Masukan Alamat</string>
    <string name="lihatdata">Lihat Data</string>
    <string name="editdata">Edit Data</string>
    <string name="datakontak">Data Kontak</string>
    <string name="namaitem">Nama Item</string>
    <string name="detailkontak">Detail Kontak</string>
    <string name="nama">Nama</string>
    <string name="notel">Nomor Telepon</string>
    <string name="cencel">Cencel</string>
</resources>