<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity"
    tools:ignore="MissingClass">

    <Button
        android:id="@+id/cencelBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:background="@drawable/rounded_corner_custom"
        android:text="@string/cencel"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toStartOf="@+id/daftarBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView7" />

    <Button
        android:id="@+id/buttonLog"
        android:layout_width="73dp"
        android:layout_height="33dp"
        android:layout_marginBottom="16dp"
        android:background="#00FFFFFF"
        android:fontFamily="sans-serif"
        android:text="@string/rLogin"
        android:textColor="#F5B971"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView3" />

    <Button
        android:id="@+id/daftarBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="68dp"
        android:layout_marginRight="68dp"
        android:background="@drawable/rounded_corner_custom"
        android:text="@string/ldaftar"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView7" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="355dp"
        android:layout_height="610dp"

        android:layout_marginBottom="136dp"
        android:background="#00FFFDFD"
        android:clickable="false"
        android:drawingCacheQuality="auto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.421"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/rectangleregis" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Register"
        android:textColor="#1B2E53"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView7"
        app:layout_constraintVertical_bias="0.03" />

    <EditText
        android:id="@+id/regNama"
        android:layout_width="285dp"
        android:layout_height="52dp"
        android:ems="10"
        android:hint="@string/enama"
        android:inputType="textPersonName"
        android:textColor="#131313"
        android:textColorHint="#66010C03"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.035"
        tools:ignore="DuplicateIds,MissingConstraints" />

    <EditText
        android:id="@+id/regEmail"
        android:layout_width="285dp"
        android:layout_height="52dp"
        android:ems="10"
        android:hint="@string/eemail"
        android:inputType="textEmailAddress"
        android:textColor="#131313"
        android:textColorHint="#66010C03"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regNama"
        app:layout_constraintVertical_bias="0.015"
        tools:ignore="DuplicateIds,MissingConstraints" />

    <RadioGroup
        android:id="@+id/opsi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/regAlamat"
        app:layout_constraintStart_toStartOf="@+id/imageView7"
        app:layout_constraintTop_toBottomOf="@+id/regEmail"
        app:layout_constraintVertical_bias="0.060000002">

        <TextView
            android:id="@+id/jKelamin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rasa_semibold"
            android:text="Jenis Kelamin : " />

        <RadioButton
            android:id="@+id/laki"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Laki-Laki" />

        <RadioButton
            android:id="@+id/perempuan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Perempuan" />

    </RadioGroup>

    <RadioGroup
        android:id="@+id/gAgama"
        android:layout_width="270dp"
        android:layout_height="133dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/regAlamat"
        app:layout_constraintStart_toStartOf="@+id/imageView7"
        app:layout_constraintTop_toBottomOf="@+id/opsi"
        app:layout_constraintVertical_bias="0.060000002">

        <TextView
            android:id="@+id/agama"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rasa_semibold"
            android:text="Agama :  " />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/islam"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Islam" />

            <RadioButton
                android:id="@+id/kristen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Kristen" />

            <RadioButton
                android:id="@+id/Katolik"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Katolik" />

            <RadioButton
                android:id="@+id/hindu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Hindu" />
        </RadioGroup>
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/Budha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Budha" />
            <RadioButton
                android:id="@+id/konghucu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Konghucu" />
            <RadioButton
                android:id="@+id/lainnya"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="Penganut Kepercayaan" />
            <RadioButton
                android:id="@+id/lucnut"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TAK BERAGAMA" />
        </RadioGroup>

    </RadioGroup>

    <EditText
        android:id="@+id/regAlamat"
        android:layout_width="285dp"
        android:layout_height="52dp"
        android:ems="10"
        android:hint="@string/ealamat"
        android:inputType="textImeMultiLine"
        android:textColor="#131313"
        android:textColorHint="#66010C03"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regEmail"
        app:layout_constraintVertical_bias="0.388"
        tools:ignore="DuplicateIds,MissingConstraints" />

    <EditText
        android:id="@+id/regPass"
        android:layout_width="285dp"
        android:layout_height="52dp"
        android:duplicateParentState="false"
        android:ems="10"
        android:hint="@string/epass"
        android:inputType="textPassword"
        android:password="true"
        android:textColor="#131313"
        android:textColorHint="#66010C03"
        android:textIsSelectable="false"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regAlamat"
        app:layout_constraintVertical_bias="0.04000002"
        tools:ignore="MissingConstraints"
        tools:password="false" />

    <EditText
        android:id="@+id/regPass2"
        android:layout_width="285dp"
        android:layout_height="52dp"
        android:ems="10"
        android:hint="@string/erepass"
        android:inputType="textPassword"
        android:password="true"
        android:textColor="#131313"
        android:textColorHint="#66010C03"
        android:textSize="21sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regPass"
        app:layout_constraintVertical_bias="0.060000002"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:layout_marginLeft="104dp"
        android:layout_marginBottom="24dp"
        android:text="Have an account ?"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="196dp" />



</androidx.constraintlayout.widget.ConstraintLayout>



